@@ -46,7 +46,6 @@ Parsing output
 --------------
 
 .. automethod:: MRJob.parse_output
-.. automethod:: MRJob.parse_output_line
 
 Counters and status messages
 ----------------------------
